fixing blurry background for ios

--- a/style/style.css
+++ b/style/style.css
@@ -2,7 +2,7 @@ body{
     background-color: #494949;
     padding-top: 8vw; 
     background-image: url(../images/natureBackground/natureBackground2.jpg);
-    background-attachment: fixed;
+    
     background-repeat: no-repeat;
     background-size: cover;
     
@@ -192,8 +192,8 @@ h1{
     body{
         background-image: url(../images/natureBackground/natureBackground2.jpg) no-repeat center;
         padding-top: 25vw; 
-        background-attachment: scroll;
-        background-size: auto;
+        
+        
     }
 
     h1{
